@@ -72,11 +72,10 @@ SPICEdev BSIM4v6info = {
     NULL,          /* DEVacct        */
 #endif
     &BSIM4v6iSize,   /* DEVinstSize    */
-    &BSIM4v6mSize    /* DEVmodSize     */
+    &BSIM4v6mSize,   /* DEVmodSize     */
 #ifdef KLU
-,
-BSIM4v6bindklu,
-BSIM4v6bindkluComplex
+    BSIM4v6bindklu,        /* DEVbindklu        */
+    BSIM4v6bindkluComplex, /* DEVbindkluComplex */
 #endif
 
 };
