@@ -72,11 +72,10 @@ SPICEdev RESinfo = {
  /* DEVacct       */ NULL,
 #endif                        
  /* DEVinstSize   */ &RESiSize,
- /* DEVmodSize    */ &RESmSize
+ /* DEVmodSize    */ &RESmSize,
 #ifdef KLU
-,
-RESbindklu,
-RESbindkluComplex
+ /* DEVbindklu        */   RESbindklu,
+ /* DEVbindkluComplex */   RESbindkluComplex,
 #endif
 
 };
