@@ -72,11 +72,10 @@ SPICEdev VSRCinfo = {
  /* DEVacct       */ NULL,
 #endif                        
  /* DEVinstSize   */ &VSRCiSize,
- /* DEVmodSize    */ &VSRCmSize
+ /* DEVmodSize    */ &VSRCmSize,
 #ifdef KLU
-,
-VSRCbindklu,
-VSRCbindkluComplex
+ /* DEVbindklu        */ VSRCbindklu,
+ /* DEVbindkluComplex */ VSRCbindkluComplex,
 #endif
 
 };
